[package]
name = "audio-sharing-pc"
version = "0.1.0"
authors = ["Anton Rapetov <willir29@yandex.ru>"]
edition = "2018"

[dependencies]
hound = "3.4"
crossbeam-channel = "0.3"
signal-hook = "0.1"
libc = "0.2"
mio = "0.6"
stream-audio-ffmpeg = { git="https://github.com/stream-audio/ffmpeg.git" }
#stream-audio-ffmpeg = { path="../ffmpeg" }
